--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <div id="blur-box">
         <div id="profile-picture">
-            <img src="files/profilepic.png" alt="Profile Picture">
+            <img src="profilepic.png" alt="Profile Picture">
         </div>
         <div id="username">my opsec is better</div>
         <div id="bio">you're a skid</div>
@@ -138,7 +138,7 @@
     </video>
 
     <audio id="audio-background" autoplay loop>
-        <source src="files/audio.mp3" type="audio/mpeg">
+        <source src="audio.mp3" type="audio/mpeg">
     </audio>
 
     <script>
