--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>@actavis ~ actavis.lol</title>
-    <meta property="og:title" content="@actavis ~ actavis.lol">
-    <meta property="og:description" content="100% skid, 0% gay">
+    <title>@vlone ~ vlone</title>
+    <meta property="og:title" content="@vlone ~ vlone.lol">
+    <meta property="og:description" content="im a skid">
 </head>
 
 <style>
