--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>@vlone ~ vlone</title>
+    <title>@vlone ~ vlone.lol</title>
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="vlone.lol">
+    <meta property="og:url" content="https://vlone.lol/">
     <meta property="og:title" content="@vlone ~ vlone.lol">
-    <meta property="og:description" content="im a skid">
+    <meta property="og:description" content="vlone rapes curtains at night">
+    <meta property="og:image" content="https://vlone.lol/profilepic.png">
 </head>
 
 <style>
