--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <style>
     html {
-        cursor: url('https://cdn.discordapp.com/attachments/'), default;
+        cursor: url('https://vlone.lol/white_cursor.cur'), default;
         -webkit-touch-callout: none;
         -webkit-user-select: none;
         -khtml-user-select: none;
