--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <div id="blur-box">
         <div id="profile-picture">
-            <img src="profilepic.png" alt="Profile Picture">
+            <img src="profilepic.jpg" alt="Profile Picture">
         </div>
         <div id="username">my opsec is better</div>
         <div id="bio">you're a skid</div>
