--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
     </div>
 
     <video id="video-background" autoplay muted loop>
-        <source src="Summrs_-_More_Motion_Dir._by_DotComNirvan.mp4" type="video/mp4">
+        <source src="LUCKI - 2021 Vibes (Official Video) (720p).mp4" type="video/mp4">
     </video>
 
     <audio id="audio-background" autoplay loop>
-        <source src="Summrs_-_More_Motion_Dir._by_DotComNirvan.mp3" type="audio/mpeg">
+        <source src="LUCKI - 2021 Vibes (Official Video) (720p).mp3" type="audio/mpeg">
     </audio>
 
     <script>
