--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div id="profile-picture">
             <img src="profilepic.jpg" alt="Profile Picture">
         </div>
-        <div id="username">my opsec is better</div>
+        <div id="username">vlone</div>
         <div id="bio">you're a skid</div>
     </div>
 
