--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </video>
 
     <audio id="audio-background" autoplay loop>
-        <source src=LUCKI - 2021 Vibes (Official Video).mp3" type="audio/mpeg">
+        <source src="LUCKI - 2021 Vibes (Official Video).mp3" type="audio/mpeg">
     </audio>
 
     <script>
