--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta property="og:site_name" content="vlone.lol">
     <meta property="og:url" content="https://vlone.lol/">
     <meta property="og:title" content="@vlone ~ vlone.lol">
-    <meta property="og:description" content="100% skid, 0% gay">
-    <meta property="og:image" content="https://cdn.discordapp.com/attachments/1212492083546296392/1212868137540784169/5b3bf0e5a0f53221341b7a0caad83a4d.png">
+    <meta property="og:description" content="your a skid">
+    <meta property="og:image" content="https://vlone.lol/profilepic.jpg">
 </head>
 
 <style>
