--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
 
     <div id="blur-box">
         <div id="profile-picture">
-            <img src="files/profilepic.png" alt="Profile Picture">
+            <img src="profilepic.png" alt="Profile Picture">
         </div>
-        <div id="username">vuhlone</div>
+        <div id="username">vlone</div>
         <div id="bio">your a skid</div>
     </div>
 
