--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
     <div id="blur-box">
         <div id="profile-picture">
-            <img src="profilepic.png" alt="Profile Picture">
+            <img src="profilepic.jpg" alt="Profile Picture">
         </div>
         <div id="username">vlone</div>
         <div id="bio">your a skid</div>
