--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:url" content="https://vlone.lol/">
     <meta property="og:title" content="@vlone ~ vlone.lol">
     <meta property="og:description" content="your a skid">
-    <meta property="og:image" content="https://vlone.lol/profilepic.jpg">
+    <meta property="og:image" content="https://vlone.lol/files/profilepic.jpg">
 </head>
 
 <style>
@@ -125,7 +125,7 @@
 
     <div id="blur-box">
         <div id="profile-picture">
-            <img src="profilepic.jpg" alt="Profile Picture">
+            <img src="files/profilepic.jpg" alt="Profile Picture">
         </div>
         <div id="username">vlone</div>
         <div id="bio">your a skid</div>
