--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
             document.getElementById("blur-box").style.display = "block";
             document.getElementById("video-background").style.display = "block";
             bgAudio.play();
+            bgAudio.musicVolume = 0.15;
         });
     </script>
 </body>
