--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <img src="files/profilepic.jpg" alt="Profile Picture">
         </div>
         <div id="username">vlone</div>
-        <div id="bio">your a skid</div>
+        <div id="bio">@summrsfan38 on cord</div>
     </div>
 
     <video id="video-background" loop>
