--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </div>
 
     <video id="video-background" loop>
-        <source src="Punchmade Dev - I'm Rich, You're Poor (Official Music Video).mp4" type="video/mp4">
+        <source src="punchmadedev.mp4" type="video/mp4">
     </video>
 
     <script>
