--- a/index.html
+++ b/index.html
@@ -1,1 +1,151 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>@vlone ~ vlone.lol</title>
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="vlone.lol">
+    <meta property="og:url" content="https://vlone.lol/">
+    <meta property="og:title" content="@vlone ~ vlone.lol">
+    <meta property="og:description" content="your a skid">
+    <meta property="og:image" content="https://vlone.lol/files/profilepic.jpg">
+</head>
 
+<style>
+    html {
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+    }
+
+    body {
+        background-color:#060707;
+        padding: 0;
+        margin: 0;
+        height: 100%;
+        font-family: "Segoe UI", "Source Sans Pro", Calibri, Candara, Arial, sans-serif;
+        text-align: center;
+        color: white;
+    }
+
+    #blur-box {
+        display: none;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 31px;
+        width: 35%;
+        background-color: rgba(0, 0, 0, 0.1);
+        backdrop-filter: blur(15px);
+        border-radius: 10px;
+        color: rgba(255, 255, 255, 0.774);
+        text-align: center;
+        animation: fadein 1s forwards;
+    }
+
+    #profile-picture {
+        width: 100px;
+        height: 100px;
+        background-color: #ffffff00;
+        border-radius: 50%;
+        position: absolute;
+        top: 30%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        overflow: hidden;
+    }
+
+    #profile-picture img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    #username {
+        font-size: 35px;
+        margin-top: 130px;
+        text-shadow: 0 0 15px rgba(255, 255, 255, 0.8);
+    }
+
+    #bio {
+        font-size: 18px;
+        margin-top: 10px;
+        text-shadow: 0 0 15px rgba(255, 255, 255, 0.8);
+    }
+
+    #video-background {
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: -1;
+        animation: fadein 1s forwards;
+    }
+
+    .next {
+        top: 50%;
+        left: 50%;
+        color: #fff;
+        position: absolute;
+        font-weight: normal;
+        font-size: 20px;
+        transform: translate(-50%, -50%);
+        font-family: "Segoe UI", "Source Sans Pro", Calibri, Candara, Arial, sans-serif;
+    }
+
+    @keyframes fadeout {
+        from {
+            opacity: 1;
+        }
+
+        to {
+            opacity: 0;
+        }
+    }
+
+    @keyframes fadein {
+        from {
+            opacity: 0;
+        }
+
+        to {
+            opacity: 1;
+        }
+    }
+</style>
+
+<body>
+    <div id="button"><b class="next glowing-text">Click To Continue</b></div>
+
+    <div id="blur-box">
+        <div id="profile-picture">
+            <img src="files/profilepic.jpg" alt="Profile Picture">
+        </div>
+        <div id="username">vlone</div>
+        <div id="bio">i am a skid</div>
+    </div>
+
+    <video id="video-background" loop>
+        <source src="files/punchmadedev.mp4" type="video/mp4">
+    </video>
+
+    <script>
+        document.getElementById("button").addEventListener("click", function () {
+            var button = this;
+            button.style.animation = "fadeout 1s forwards";
+
+            var bgAudio = document.getElementById("video-background"); 
+            document.getElementById("blur-box").style.display = "block";
+            document.getElementById("video-background").style.display = "block";
+            bgAudio.musicVolume = 0.05;
+            bgAudio.play();
+        });
+    </script>
+</body>
+</html
