--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             var bgAudio = document.getElementById("video-background"); 
             document.getElementById("blur-box").style.display = "block";
             document.getElementById("video-background").style.display = "block";
-            bgAudio.musicVolume = 0.05;
+            bgAudio.volume = 0.05;
             bgAudio.play();
         });
     </script>
