--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="vlone.lol">
     <meta property="og:url" content="https://vlone.lol/">
-    <meta property="og:title" content="@vlone ~ vlone.lol">
-    <meta property="og:description" content="your a skid">
+    <meta property="og:title" content="i hate niggers">
+    <meta property="og:description" content="i skidded this src">
     <meta property="og:image" content="https://vlone.lol/files/profilepic.jpg">
 </head>
 
@@ -121,14 +121,14 @@
 </style>
 
 <body>
-    <div id="button"><b class="next glowing-text">Click To Continue</b></div>
+    <div id="button"><b class="next glowing-text">enter void</b></div>
 
     <div id="blur-box">
         <div id="profile-picture">
             <img src="files/profilepic.jpg" alt="Profile Picture">
         </div>
-        <div id="username">vlone</div>
-        <div id="bio">i am a skid</div>
+        <div id="username">cries</div>
+        <div id="bio">scary uwu xd</div>
     </div>
 
     <video id="video-background" loop>
