--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 </style>
 
 <body>
-    <div id="button"><b class="next glowing-text">enter void</b></div>
+    <div id="button"><b class="next glowing-text">click to enter</b></div>
 
     <div id="blur-box">
         <div id="profile-picture">
