--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="vlone.lol">
     <meta property="og:url" content="https://vlone.lol/">
-    <meta property="og:title" content="i hate niggers">
-    <meta property="og:description" content="i skidded this src">
+    <meta property="og:title" content="i love femboys">
+    <meta property="og:description" content="femboy lover">
     <meta property="og:image" content="https://vlone.lol/files/profilepic.jpg">
 </head>
 
@@ -127,8 +127,8 @@
         <div id="profile-picture">
             <img src="files/profilepic.jpg" alt="Profile Picture">
         </div>
-        <div id="username">cries</div>
-        <div id="bio">scary uwu xd</div>
+        <div id="username">vlone</div>
+        <div id="bio">femboy raper</div>
     </div>
 
     <video id="video-background" loop>
