--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>i hate niggers</title>
+    <title>i rape femboys</title>
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="vlone.lol">
     <meta property="og:url" content="https://vlone.lol/">
