--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>i rape femboys</title>
+    <title>threats</title>
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="vlone.lol">
     <meta property="og:url" content="https://vlone.lol/">
@@ -28,22 +28,6 @@
         font-family: "Segoe UI", "Source Sans Pro", Calibri, Candara, Arial, sans-serif;
         text-align: center;
         color: white;
-    }
-
-    #blur-box {
-        display: none;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        padding: 31px;
-        width: 35%;
-        background-color: rgba(0, 0, 0, 0.1);
-        backdrop-filter: blur(15px);
-        border-radius: 10px;
-        color: rgba(255, 255, 255, 0.774);
-        text-align: center;
-        animation: fadein 1s forwards;
     }
 
     #profile-picture {
@@ -128,7 +112,7 @@
             <img src="files/profilepic.jpg" alt="Profile Picture">
         </div>
         <div id="username">threat</div>
-        <div id="bio">moscow</div>
+        <div id="bio">📍moscow</div>
     </div>
 
     <video id="video-background" loop>
