--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>threats</title>
+    <title>lolollolololololololol</title>
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="vlone.lol">
     <meta property="og:url" content="https://vlone.lol/">
-    <meta property="og:title" content="lll">
+    <meta property="og:title" content="i love femboys">
     <meta property="og:description" content="femboy lover">
     <meta property="og:image" content="https://vlone.lol/files/profilepic.jpg">
 </head>
@@ -28,6 +28,22 @@
         font-family: "Segoe UI", "Source Sans Pro", Calibri, Candara, Arial, sans-serif;
         text-align: center;
         color: white;
+    }
+
+    #blur-box {
+        display: none;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 31px;
+        width: 35%;
+        background-color: rgba(0, 0, 0, 0.1);
+        backdrop-filter: blur(15px);
+        border-radius: 10px;
+        color: rgba(255, 255, 255, 0.774);
+        text-align: center;
+        animation: fadein 1s forwards;
     }
 
     #profile-picture {
@@ -112,7 +128,7 @@
             <img src="files/profilepic.jpg" alt="Profile Picture">
         </div>
         <div id="username">threat</div>
-        <div id="bio">📍moscow</div>
+        <div id="bio">femboy raper</div>
     </div>
 
     <video id="video-background" loop>
