--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<p><a href="https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://www.pornhub.com/gayporn&ved=2ahUKEwj9pqaFrquKAxXVkYkEHUpCHK8QFnoECAsQAQ&usg=AOvVaw1svzh3Gg1zqakf7SiiUqKL">Redirect</a></p>
+<p><a href="https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://www.pornhub.com/gayporn&ved=2ahUKEwj9pqaFrquKAxXVkYkEHUpCHK8QFnoECAsQAQ&usg=AOvVaw1svzh3Gg1zqakf7SiiUqKL">Click to enter...</a></p>
