--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-<p><a href="https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://www.pornhub.com/gayporn&ved=2ahUKEwj9pqaFrquKAxXVkYkEHUpCHK8QFnoECAsQAQ&usg=AOvVaw1svzh3Gg1zqakf7SiiUqKL"><body>
-    <div id="button"><b class="next glowing-text">click to enter</b></div></a></p>
+<head>
+  <meta http-equiv='refresh' content='0; URL=https://www.pornhub.com/gayporn&ved=2ahUKEwj9pqaFrquKAxXVkYkEHUpCHK8QFnoECAsQAQ&usg=AOvVaw1svzh3Gg1zqakf7SiiUqKL'>
+</head>
